@@ -5,7 +5,7 @@ Curl and libcurl 7.16.1
  Available command line options:           112
  Available curl_easy_setopt() options:     133
  Number of public functions in libcurl:    54
- Amount of public web site mirrors:        39
+ Amount of public web site mirrors:        38
  Number of known libcurl bindings:         35
  Number of contributors:                   524
 
@@ -13,6 +13,7 @@ This release includes the following changes:
  
  o Support for SCP and SFTP were added
  o CURLOPT_CLOSEPOLICY is now deprecated
+ o --ftp-ssl-ccc and CURLOPT_FTP_SSL_CCC were added
 
 This release includes the following bugfixes:
 
@@ -67,6 +68,6 @@ advice from friends like these:
  Matt Witherspoon, Alexey Simak, Martin Skinner, Sh Diao, Jared Lundell,
  Stefan Krause, Sebastien Willemijns, Alexey Simak, Brendan Jurd,
  Robson Braga Araujo, David McCreedy, Robert Foreman, Nathanael Nerode,
- Victor Snezhko
+ Victor Snezhko, Linus Nielsen Feltzing
 
         Thanks! (and sorry if I forgot to mention someone)
